@@ -51,10 +51,9 @@ VARIABLE(grub_prefix)
 	 */
 
 	. = _start + GRUB_KERNEL_MACHINE_PREFIX_END
-VARIABLE (grub_arch_cpuclock)
-	.long 0
-#ifdef GRUB_MACHINE_MIPS_LOONGSON
 VARIABLE (grub_arch_busclock)
+	.long 0
+VARIABLE (grub_arch_cpuclock)
 	.long 0
 VARIABLE (grub_arch_memsize)
 	.long 0
@@ -62,7 +61,6 @@ VARIABLE (grub_arch_highmemsize)
 	.long 0
 VARIABLE (grub_arch_machine)
 	.long GRUB_ARCH_MACHINE_FULOONG
-#endif
 cont:
 	/* Save our base.  */
 	move $s0, $ra
